--- a/_sass/custom_theme.scss
+++ b/_sass/custom_theme.scss
@@ -10,13 +10,13 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$text-color:       #ddd !default;
+$background-color: #111 !default;
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
+$grey-color-slight: darken($grey-color, 25%) !default;
+$grey-color-strong: lighten($grey-color, 25%) !default;
 
 $table-text-align: left !default;
 
@@ -45,7 +45,7 @@ $on-laptop:        800px !default;
 
 // Import partials.
 @import
-  "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting"
+  "custom_theme/base",
+  "custom_theme/layout",
+  "custom_theme/syntax-highlighting"
 ;
