--- a/_sass/custom_theme/_base.scss
+++ b/_sass/custom_theme/_base.scss
@@ -107,7 +107,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: lighten($brand-color, 15%);
   }
 
   &:hover {
@@ -130,7 +130,7 @@ a {
  */
 blockquote {
   color: $grey-color;
-  border-left: 4px solid $grey-color-light;
+  border-left: 4px solid $grey-color-slight;
   padding-left: $spacing-unit / 2;
   @include relative-font-size(1.125);
   letter-spacing: -1px;
@@ -149,9 +149,9 @@ blockquote {
 pre,
 code {
   @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
+  border: 1px solid $grey-color-slight;
   border-radius: 3px;
-  background-color: #eef;
+  background-color: #222;
 }
 
 code {
@@ -234,21 +234,21 @@ table {
   text-align: $table-text-align;
   color: lighten($text-color, 18%);
   border-collapse: collapse;
-  border: 1px solid $grey-color-light;
+  border: 1px solid $grey-color-slight;
   tr {
     &:nth-child(even) {
-      background-color: lighten($grey-color-light, 6%);
+      background-color: lighten($grey-color-slight, 6%);
     }
   }
   th, td {
     padding: ($spacing-unit / 3) ($spacing-unit / 2);
   }
   th {
-    background-color: lighten($grey-color-light, 3%);
-    border: 1px solid darken($grey-color-light, 4%);
-    border-bottom-color: darken($grey-color-light, 12%);
+    background-color: lighten($grey-color-slight, 3%);
+    border: 1px solid darken($grey-color-slight, 4%);
+    border-bottom-color: darken($grey-color-slight, 12%);
   }
   td {
-    border: 1px solid $grey-color-light;
+    border: 1px solid $grey-color-slight;
   }
 }
