--- a/_sass/custom_theme/_layout.scss
+++ b/_sass/custom_theme/_layout.scss
@@ -2,8 +2,7 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
+  border-bottom: 1px solid $grey-color-slight;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
@@ -20,7 +19,7 @@
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: $grey-color-strong;
   }
 }
 
@@ -51,7 +50,7 @@
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    border: 1px solid $grey-color-slight;
     border-radius: 5px;
     text-align: right;
 
@@ -74,7 +73,7 @@
       text-align: center;
 
       > svg {
-        fill: $grey-color-dark;
+        fill: $grey-color-strong;
       }
     }
 
@@ -106,7 +105,7 @@
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $grey-color-light;
+  border-top: 1px solid $grey-color-slight;
   padding: $spacing-unit 0;
 }
 
